# openal-soft

./: CMakeLists.txt  README.md
OpenALConsoleApp/: OpenALConsoleApp.sln
OpenALConsoleApp/OpenALConsoleApp/: MyDebug.cs  NativeMethods.cs  OpenALConsoleApp.csproj  Program.cs  SimpleAudioPlayer.cs
OpenALConsoleApp/OpenALConsoleApp/DummyUnityClasses/: Debug.cs  MonoBehaviour.cs
OpenALConsoleApp/OpenALConsoleApp/Examples/: SimpleAudioPlayer.cs
OpenALConsoleApp/OpenALConsoleApp/OpenALSoft/: AudioBuffer.cs  AudioDevice.cs  AudioListener.cs  NativeMethods.cs
UnityPlugin/: AudioBuffer.cpp  AudioBuffer.h  AudioDevice.cpp  AudioDevice.h  AudioListener.cpp  AudioListener.h  CMakeLists.txt  MyDebug.cpp  MyDebug.h  MyMath.cpp  MyMath.h  audioplugin.cpp  pch.h
UnitySource/OpenALSoft_Unity/: .gitignore
UnitySource/OpenALSoft_Unity/Assets/App/: Test.unity
UnitySource/OpenALSoft_Unity/Assets/App/Scripts/: AudioSpace.cs  MyDebug.cs
UnitySource/OpenALSoft_Unity/Assets/App/Scripts/Test/: TestAudioSpace.cs
UnitySource/OpenALSoft_Unity/Assets/Scenes/: SampleScene.unity
UnitySource/OpenALSoft_Unity/ProjectSettings/: ProjectSettings.asset
common/: threads.cpp
examples/: almultireverb.c  alreverb.c  alstreamcb.cpp
